<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:orientation="horizontal"
              android:layout_height="wrap_content"
android:background="@color/colorPrimaryDark">

    <TextView
            android:id="@+id/block"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Block"

            android:gravity="center|center_vertical"
            android:text="@string/block"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@android:color/white"
            android:layout_weight=".45"/>


    <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            tools:text="Phone number"
            android:gravity="center|center_vertical"
            android:text="@string/phone_number"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_weight="1.0" />

    <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center|center_vertical"
            android:layout_weight="1.5"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/date"
            tools:text="Date"
    />
    <TextView
            android:id="@+id/numberOfTimesSeen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/number_of_times_seen"
            android:layout_weight="1.0"
            android:textStyle="bold"
            android:gravity="center|center_vertical"
            android:textColor="@android:color/white"
            tools:text="number of times seen"
    />
</LinearLayout>






