<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
>


    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/instructions"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="15dp"
            android:textSize="18sp"
            android:text="@string/text_rates_may_apply"
            android:textStyle="bold"/>

    <TextView
            android:layout_marginBottom="25dp"
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/userIDTextInputLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:paddingBottom="25dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/instructions"
            android:textStyle="bold"/>



    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userIDTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="@color/colorPrimary"
            android:layout_width="350dp"
            android:layout_height="175dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instructions"
            android:hint="@string/what_to_tell_robotexters"

            android:layout_margin="10dp"
    >

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Be Gone Robotexter"
                android:gravity="top"
                android:background="@android:color/white"
                android:maxLength="160"
                android:minHeight="250dp"
                android:lines="5"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <ToggleButton
            android:id="@+id/tb"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="36dp"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userIDTextInputLayout"
            android:textOff="@string/turn_on_autoresponder"
            android:textOn="@string/turn_off_autoresponder"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal|center_vertical"
            android:background="@drawable/ic_toggle"
            android:paddingBottom="@dimen/activity_vertical_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>